--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "carbon-icons": "^7.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.32.8",
