--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@owaiswiz/use-in-view": "^1.0.16",
+    "@tailwindcss/forms": "^0.3.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.8",
@@ -10,13 +12,17 @@
     "carbon-components": "^10.33.0",
     "carbon-components-react": "^7.33.0",
     "carbon-icons": "^7.0.7",
+    "framer-motion": "^4.1.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0",
     "react-password-strength-bar": "^0.3.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "sass": "^1.32.12",
+    "styled-components": "^5.3.0",
+    "twin.macro": "^2.4.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -44,7 +50,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.2.5",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "postcss": "^8.2.14",
+    "tailwindcss": "^2.1.2",
     "yarn-upgrade-all": "^0.5.4"
   }
 }
