--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "carbon-components": "^10.33.0",
     "carbon-components-react": "^7.33.0",
     "carbon-icons": "^7.0.7",
+    "evergreen-ui": "^5.1.2",
     "framer-motion": "^4.1.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
