config: add router url in env config

--- a/env.example
+++ b/env.example
@@ -1,5 +1,6 @@
 SASS_PATH="node_modules"
 REACT_APP_API_URL="http://localhost:9000"
+REACT_APP_ROUTER_URL="http://localhost:6969"
 REACT_APP_GOOGLE_CLIENT_ID=" client id from GCP"
 HTTPS=false
 SSL_CRT_FILE=
