update: set page name on title bar

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "SMSwithoutBorders",
-  "name": "SMSwithoutBorders User",
+  "name": "SMSwithoutBorders",
   "icons": [
     {
       "src": "favicon.ico",
