chore: update packages and migrate to CRA v5

--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
-VITE_API_URL="http://localhost:9000"
-VITE_ROUTER_URL="http://localhost:6969"
-VITE_PORT=18000
+REACT_APP_API_URL="http://localhost:9000"
+REACT_APP_ROUTER_URL="http://localhost:6969"
+PORT=18000
 HTTPS=false
 SSL_CRT_FILE=
 SSL_KEY_FILE=
