--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@hookform/resolvers": "^2.8.5",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
+    "evergreen-ui": "^6.7.1",
     "framer-motion": "^4.1.17",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
@@ -25,7 +27,6 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.5",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.0.15",
     "twin.macro": "^2.8.2"
