refactor: remove evergreen-ui components

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
-    "evergreen-ui": "^6.7.1",
     "framer-motion": "^4.1.17",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.0",
+    "react-hot-toast": "^2.2.0",
     "react-icons": "^4.2.0",
     "react-markdown": "^7.1.2",
     "react-password-strength-bar": "^0.3.3",
