--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "css-select": "^4.2.1",
     "framer-motion": "^4.1.17",
     "postcss": "^8.4.5",
+    "prop-types": "^15.8.1",
     "qrcode.react": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
