refactor: change router url to gateway server fixes #18

--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
 PORT=18000
 REACT_APP_API_URL="http://localhost:9000"
-REACT_APP_ROUTER_URL="http://localhost:6969"
+REACT_APP_GATEWAY_SERVER="http://localhost:6969"
 REACT_APP_DOCS_URL=""
 
 HTTPS=false
