--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
     "react-hot-toast": "^2.2.0",
     "react-icons": "^4.2.0",
     "react-markdown": "^7.1.2",
-    "react-password-strength-bar": "^0.3.3",
     "react-phone-number-input": "^3.1.23",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "svgo": "^2.8.0",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
