--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "framer-motion": "^4.1.17",
     "postcss": "^8.4.5",
     "prop-types": "^15.8.1",
-    "qrcode.react": "^1.0.1",
+    "qrious": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.0",
