--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 PORT=18000
 REACT_APP_API_URL="http://localhost:9000"
-REACT_APP_GATEWAY_SERVER="http://localhost:6969"
-REACT_APP_DOCS_URL=""
+REACT_APP_GATEWAY_SERVER="http://localhost:6969/v2"
+REACT_APP_DOCS_URL="https://raw.githubusercontent.com/smswithoutborders/smswithoutborders.com/dev/docs/privacy.md"
 
 HTTPS=false
 SSL_CRT_FILE=
