refactor: update config files and env variables

--- a/env.example
+++ b/env.example
@@ -1,6 +1,8 @@
 PORT=18000
 REACT_APP_API_URL="http://localhost:9000"
-REACT_APP_GATEWAY_SERVER="http://localhost:6969/v2"
+REACT_APP_API_VERSION="v2"
+REACT_APP_GATEWAY_SERVER="http://localhost:6969"
+REACT_APP_GATEWAY_SERVER_VERSION="v2"
 REACT_APP_DOCS_URL="https://raw.githubusercontent.com/smswithoutborders/smswithoutborders.com/dev/docs/privacy.md"
 
 HTTPS=false
