docs: add reCAPTCHA env variables and config description

--- a/env.example
+++ b/env.example
@@ -4,6 +4,8 @@ REACT_APP_API_VERSION="v2"
 REACT_APP_GATEWAY_SERVER="http://localhost:6969"
 REACT_APP_GATEWAY_SERVER_VERSION="v2"
 REACT_APP_DOCS_URL="https://raw.githubusercontent.com/smswithoutborders/smswithoutborders.com/dev/docs/privacy.md"
+REACT_APP_RECAPTCHA_SITE_KEY=" place key here"
+REACT_APP_RECAPTCHA_API_URL="https://www.google.com/recaptcha/api.js"
 
 HTTPS=false
 SSL_CRT_FILE=
