chore: add i18n for internationalization

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "clsx": "^1.1.1",
     "css-select": "^4.2.1",
     "framer-motion": "^4.1.17",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.4.0",
     "postcss": "^8.4.5",
     "prop-types": "^15.8.1",
     "qrious": "^4.0.2",
@@ -19,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.24.0",
     "react-hot-toast": "^2.2.0",
+    "react-i18next": "^11.15.7",
     "react-icons": "^4.2.0",
     "react-markdown": "^7.1.2",
     "react-phone-number-input": "^3.1.23",
