--- a/env.example
+++ b/env.example
@@ -7,6 +7,7 @@ REACT_APP_DOCS_URL="https://raw.githubusercontent.com/smswithoutborders/smswitho
 REACT_APP_RECAPTCHA=true
 REACT_APP_RECAPTCHA_SITE_KEY=" place key here"
 REACT_APP_RECAPTCHA_API_URL="https://www.google.com/recaptcha/api.js"
+REACT_APP_TUTORIAL_URL="https://smswithoutborders.github.io/docs/tutorials/getting-started"
 
 HTTPS=false
 SSL_CRT_FILE=
