docs(config): add gateway client tutorial url

--- a/env.example
+++ b/env.example
@@ -8,6 +8,7 @@ REACT_APP_RECAPTCHA=true
 REACT_APP_RECAPTCHA_SITE_KEY=" place key here"
 REACT_APP_RECAPTCHA_API_URL="https://www.google.com/recaptcha/api.js"
 REACT_APP_TUTORIAL_URL="https://smswithoutborders.github.io/docs/tutorials/getting-started"
+REACT_APP_GATEWAY_TUTORIAL_URL=""
 
 HTTPS=false
 SSL_CRT_FILE=
