--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
+    "intro.js": "^5.1.0",
+    "intro.js-react": "^0.6.0",
     "postcss": "^8.4.5",
     "prop-types": "^15.8.1",
     "qrious": "^4.0.2",
@@ -36,7 +38,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "async": "^3.2.3",
     "autoprefixer": "^10.4.2",
+    "jake": "^10.8.5",
     "minimist": "^1.2.6",
     "node-forge": "^1.3.1",
     "styled-components": "^5.3.3",
