chore(deps): update packages to fix build warning s and console errors

--- a/env.example
+++ b/env.example
@@ -1,4 +1,6 @@
 PORT=18000
+GENERATE_SOURCEMAP=false
+
 REACT_APP_API_URL="http://localhost:9000"
 REACT_APP_API_VERSION="v2"
 REACT_APP_GATEWAY_SERVER="http://localhost:15000"
