--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
-    "intro.js": "^5.1.0",
-    "intro.js-react": "^0.6.0",
+    "intro.js": "^6.0.0",
+    "intro.js-react": "^0.7.0",
     "postcss": "^8.4.5",
     "prop-types": "^15.8.1",
     "qrious": "^4.0.2",
@@ -30,30 +30,28 @@
     "react-phone-number-input": "^3.1.23",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "svgo": "^2.8.0",
     "yup": "^0.32.11",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.4.0",
-    "@tailwindcss/typography": "^0.5.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
     "async": "^3.2.3",
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.13",
     "jake": "^10.8.5",
     "minimist": "^1.2.6",
     "node-forge": "^1.3.1",
     "styled-components": "^5.3.3",
-    "tailwindcss": "^3.0.15",
+    "tailwindcss": "^3.2.1",
     "twin.macro": "^2.8.2"
   },
-  "overrides": {
-    "react-scripts": {
-      "@svgr/webpack": "^6.1.2",
-      "css-select": "^4.2.1",
-      "postcss": "^8.4.5",
-      "svgo": "^2.8.0"
-    }
+  "resolutions": {
+    "@svgr/webpack": "^6.1.2",
+    "css-select": "^4.2.1",
+    "postcss": "^8.4.5",
+    "svgo": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
