update: add support for generating dynamic env configs and docker builds

--- a/env.example
+++ b/env.example
@@ -1,16 +1,16 @@
 PORT=18000
 GENERATE_SOURCEMAP=false
 
-REACT_APP_API_URL="http://localhost:9000"
-REACT_APP_API_VERSION="v2"
-REACT_APP_GATEWAY_SERVER="http://localhost:15000"
-REACT_APP_GATEWAY_SERVER_VERSION="v2"
+REACT_APP_API_URL=http://localhost:9000
+REACT_APP_API_VERSION=v2
+REACT_APP_GATEWAY_SERVER=http://localhost:15000
+REACT_APP_GATEWAY_SERVER_VERSION=v2
 REACT_APP_RECAPTCHA=true
-REACT_APP_RECAPTCHA_SITE_KEY=" place key here"
-REACT_APP_RECAPTCHA_API_URL="https://www.google.com/recaptcha/api.js"
-REACT_APP_TUTORIAL_URL="https://smswithoutborders.github.io/docs/tutorials/getting-started"
-REACT_APP_GATEWAY_TUTORIAL_URL="https://github.com/smswithoutborders/SMSWithoutBorders-Gateway-Client/blob/alpha_stable/src/README.md"
-REACT_APP_PRIVACY_POLICY_URL="https://raw.githubusercontent.com/smswithoutborders/smswithoutborders.com/dev/docs/privacy-policy"
+REACT_APP_RECAPTCHA_SITE_KEY=
+REACT_APP_RECAPTCHA_API_URL=https://www.google.com/recaptcha/api.js
+REACT_APP_TUTORIAL_URL=https://smswithoutborders.github.io/docs/tutorials/getting-started
+REACT_APP_GATEWAY_TUTORIAL_URL=https://github.com/smswithoutborders/SMSWithoutBorders-Gateway-Client/blob/master/src/README.md
+REACT_APP_PRIVACY_POLICY_URL=https://raw.githubusercontent.com/smswithoutborders/smswithoutborders.com/main/docs/privacy-policy
 
 HTTPS=false
 SSL_CRT_FILE=
