--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "svgo": "^2.8.0"
   },
   "scripts": {
+    "prestart":"make config",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
