--- a/package.json
+++ b/package.json
@@ -38,11 +38,22 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.5",
     "async": "^3.2.3",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.28.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest-dom": "^4.0.2",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-testing-library": "^5.6.0",
     "jake": "^10.8.5",
     "minimist": "^1.2.6",
     "node-forge": "^1.3.1",
+    "prettier": "^2.8.0",
     "styled-components": "^5.3.3",
     "tailwindcss": "^3.2.1",
     "twin.macro": "^2.8.2"
@@ -54,11 +65,15 @@
     "svgo": "^2.8.0"
   },
   "scripts": {
-    "prestart":"make config",
+    "prestart": "make config",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src",
+    "fix:eslint": "eslint --fix",
+    "fix:prettier": "prettier --write './**/*.{js,jsx,css,md,json}' --config ./.prettierrc",
+    "fix": "npm run fix:eslint && npm run fix:prettier"
   },
   "eslintConfig": {
     "extends": "react-app"
