--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "postcss": "^8.4.5",
     "prop-types": "^15.8.1",
     "qrious": "^4.0.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.24.0",
     "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.15.7",
@@ -39,7 +39,8 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^12.1.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "async": "^3.2.3",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.28.0",
