feat(user idle detection): detect and logout inactive users, fixes #33 and #60

--- a/env.example
+++ b/env.example
@@ -11,6 +11,7 @@ REACT_APP_RECAPTCHA_API_URL=https://www.google.com/recaptcha/api.js
 REACT_APP_TUTORIAL_URL=https://smswithoutborders.github.io/docs/tutorials/getting-started
 REACT_APP_GATEWAY_TUTORIAL_URL=https://github.com/smswithoutborders/SMSWithoutBorders-Gateway-Client/blob/master/src/README.md
 REACT_APP_PRIVACY_POLICY_URL=https://raw.githubusercontent.com/smswithoutborders/smswithoutborders.com/main/docs/privacy-policy
+REACT_APP_MAX_IDLE_TIME=720000
 
 HTTPS=false
 SSL_CRT_FILE=
