--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.15.7",
     "react-icons": "^4.2.0",
+    "react-idle-timer": "^5.4.2",
     "react-markdown": "^7.1.2",
     "react-phone-number-input": "^3.1.23",
     "react-redux": "^7.2.6",
