--- a/configs/httpd-ssl.conf
+++ b/configs/httpd-ssl.conf
@@ -76,7 +76,7 @@ SSLHonorCipherOrder on
 #   Disable SSLv3 by default (cf. RFC 7525 3.1.1).  TLSv1 (1.0) should be
 #   disabled as quickly as practical.  By the end of 2016, only the TLSv1.2
 #   protocol or later should remain in use.
-SSSLProtocol -all +TLSv1.2 +TLSv1.3
+SSLProtocol -all +TLSv1.2 +TLSv1.3
 SSLProxyProtocol -all +TLSv1.2 +TLSv1.3
 
 #   Pass Phrase Dialog:
