added partners section

--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.6.4",
     "@hookform/resolvers": "^2.8.5",
-    "@mui/material": "^5.12.0",
+    "@mui/material": "^5.12.2",
+    "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@svgr/plugin-svgo": "^6.2.0",
     "@svgr/webpack": "^6.2.1",
     "axios": "^0.21.1",
+    "bootstrap": "^5.2.3",
     "clsx": "^1.1.1",
     "css-select": "^4.2.1",
     "framer-motion": "^4.1.17",
@@ -24,6 +26,7 @@
     "prop-types": "^15.8.1",
     "qrious": "^4.0.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.24.0",
     "react-hot-toast": "^2.2.0",
@@ -61,7 +64,7 @@
     "minimist": "^1.2.6",
     "node-forge": "^1.3.1",
     "prettier": "^2.8.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "^5.3.10",
     "tailwindcss": "^3.2.1",
     "twin.macro": "^2.8.2"
   },
