added banner to he navbar

--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.6.4",
     "@hookform/resolvers": "^2.8.5",
-    "@mui/material": "^5.12.2",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@svgr/plugin-svgo": "^6.2.0",
@@ -16,7 +17,7 @@
     "bootstrap": "^5.2.3",
     "clsx": "^1.1.1",
     "css-select": "^4.2.1",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^11.2.10",
     "i18next": "^21.6.14",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
